2014-12-04  Araki Ken  <arakiken@users.sf.net>

	* doc/en/ReleaseNote: Fix typo.

	* version.h.in: 3.4.1 -> 3.4.1post

2014-12-03  Araki Ken  <arakiken@users.sf.net>

	* 3.4.1 released.
	  (tag "rel-3_4_1")

	* configure.in, mlterm.spec, main/version.h.in,
	  MLTermPty.c, android/jni/version.h, doc/en/ReleaseNote:
	  updated for 3.4.1.

	* man/mlterm.1: Updated.

2014-12-02  Araki Ken  <arakiken@users.sf.net>

	* ml_pty_ssh.c: Minor fixes around handling error cases.

2014-11-30  Araki Ken  <arakiken@users.sf.net>

	* MLTerm.java: Null pointer exception in closing one of multiple opened
	  ptys is fixed.

	* c_sixel.c: Compiling error by g++ is fixed.

	* x_screen.c: SF Bug #72

2014-11-27  Araki Ken  <arakiken@users.sf.net>

	* mlconfig/main.c, mc_font.c: "Box drawing" and "Font policy" radio buttons
	  are moved from main.c to mc_font.c

	* mc_radio.[ch]:
	  - mc_is_vertical(), mc_always_unicode_font() and mc_never_unicode_font()
	    are removed.
	  - mc_radio_set_callback() and mc_radio_get_value() are added.

2014-11-25  Araki Ken  <arakiken@users.sf.net>

	* mc_im.c: "None" is removed from "Input Method" on win32.

	* x_xic.c: win->xic == NULL check is added.

2014-11-24  Araki Ken  <arakiken@users.sf.net>

	* ml_screen.c: line->num_of_filled_chars is reset by
	  ml_line_get_num_of_filled_chars_except_spaces_with_func(ml_char_equal)
	  instead of ml_line_get_num_of_filled_chars_except_spaces()
	  in receive_scrolled_out_line().

	* ml_line.[ch]: ml_line_get_num_of_filled_chars_except_spaces_with_func()
	  is added.

	* mc_im.c:
	  - get_kbd_info() which is implemented similarly to im_kbd_get_info()
	    is used if cygim-kbd.dll isn't found.
	  - If mlterm is built with win32gdi, "MS IME" is shown instead of "XIM".

	* mc_color.c: gdk_color_to_string() is added for gtk+ < 2.12.

	* mlconfig/main.c: mc_im_config_widget_new() is called if USE_WIN32GUI
	  is defined.

	* ml_term.h: ml_reset_pending_vt100_sequence() is called before
	  ml_start_config_menu().
