@@ -1,0 +1,17 @@
+/*
+ *	$Id$
+ */
+
+#ifndef  __MC_WORDSEP_H__
+#define  __MC_WORDSEP_H__
+
+
+#include  <gtk/gtk.h>
+
+
+GtkWidget *  mc_wordsep_config_widget_new(void) ;
+
+void  mc_update_wordsep(void) ;
+
+
+#endif
