@@ -1,3 +1,13 @@
+2014-12-07  Araki Ken  <arakiken@users.sf.net>
+
+	* mlconfig/main.c: "Word separators" entry is added to "Others" tab.
+
+	* mlconfig/mc_wordsep.[ch]: Added.
+
+	* ml_term.c: "word_separators" is added to OSC 5380/5381.
+
+	* ml_screen.[ch]: ml_get_word_separators() is added.
+
 2014-12-04  Araki Ken  <arakiken@users.sf.net>
 
 	* doc/en/ReleaseNote: Fix typo.
